<resources>
    <string name="app_name">ProfileManager</string>

    <string name="action_settings">Settings</string>
    <string name="tvMovementOfUser">Movement</string>
    <string name="tvLocationOfUser">Set Location</string>
    <string name="tvTimer">Set Time</string>
    <string name="tvBattery">Battery</string>
    <string name="tvSetTime">Set Time</string>
    <string name="tvFromTime">Please Select From Time</string>
    <string name="tvToTime">Please Select To Time</string>
    <string name="btnFromTime">Select From Time</string>
    <string name="btnToTime">Select To Time</string>
    <string name="btnPhoneMode">Select Phone Mode</string>
    <string name="btnDone">Done</string>
    <string name="fromTimePickerTag">FromTimePicker</string>
    <string name="toTimePickerTag">ToTimePicker</string>
    <string name="popTitle">Select the Phone Mode</string>
    <string name="selectedFromTime">Selected From Time is </string>
    <string name="selectedToTime">Selected To Time is </string>
    <string name="timeSeparator">:</string>
    <string name="timeFormat">HH:mm:ss</string>
    <string name="btnWalk">Walk</string>
    <string name="btnDrive">Drive</string>
    <string name="walk">Walk</string>
    <string name="drive">Drive</string>
    <string name="unIdentifiedActivity">Unidentified Activity</string>
    <string name="connectedToApi">Connected To API</string>
    <string name="connectionSuspended">Connection To API suspended</string>
    <string name="connectionFailed">Connection To API failed</string>
    <string name="phoneMode">Phone Mode</string>
    <string name="tvVeryLowBattery">Below 15%</string>
    <string name="tvLowBattery">Between 15% and 30%</string>
    <string name="tvNormalBattery">Above 30%</string>
    <string name="NetworkConnectivity">Select the Network Mode</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="separator">,</string>
    <string name="SorryUnableToCreateMap">Sorry! Unable To Create Maps</string>
    <string name="Search">Search</string>

    <string-array name="popUp">
        <item>Silent</item>
        <item>Vibration</item>
        <item>Loud</item>
    </string-array>

    <string-array name="networkConnectivityPopUp">
        <item>Disable Wifi</item>
        <item>Disable Celular Data</item>
        <item>Flight Mode</item>
    </string-array>
</resources>
