<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvVeryLowBattery"
        style="@style/layoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvVeryLowBattery"/>

    <TextView
        android:id="@+id/tvLowBattery"
        style="@style/layoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLowBattery"/>

    <TextView
        android:id="@+id/tvNormalBattery"
        style="@style/layoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNormalBattery"/>


</LinearLayout>