<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>


    <TextView
        style="@style/layoutStyle"
        android:id="@+id/tvVeryLowBattery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tvVeryLowBattery"/>

    <TextView
        style="@style/layoutStyle"
        android:id="@+id/tvLowBattery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVeryLowBattery"
        android:text="@string/tvLowBattery"/>

    <TextView
        style="@style/layoutStyle"
        android:id="@+id/tvNormalBattery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLowBattery"
        android:text="@string/tvNormalBattery"/>

</RelativeLayout>