<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

    <Button
        style="@style/layoutStyle"
        android:id="@+id/btnFromTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnFromTime"
        android:textColorHint="@color/ColorText"
        android:background="@drawable/time_selector"
        android:textColor="@color/ColorText"
        android:layout_marginBottom="@dimen/bottomMargin"/>


    <Button
        style="@style/layoutStyle"
        android:id="@+id/btnToTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnToTime"
        android:textColorHint="@color/ColorText"
        android:background="@drawable/time_selector"
        android:textColor="@color/ColorText"
        android:layout_marginBottom="@dimen/bottomMargin"
        />


    <Button
        style="@style/layoutStyle"
        android:id="@+id/btnPhoneMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneMode"
        android:textColorHint="@color/ColorText"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:background="@drawable/time_selector"
        android:textColor="@color/ColorText"/>

    <Button
        style="@style/layoutStyle"
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"
        android:background="@drawable/time_selector"
        android:textColor="@color/ColorText"/>

    </LinearLayout>


</RelativeLayout>
