<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        >

    <Button
        style="@style/layoutStyle"
        android:id="@+id/btnPhoneMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popTitle"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:background="@drawable/battery_selector"
        android:textColor="@color/ColorText"/>

    <Button
        style="@style/layoutStyle"
        android:id="@+id/btnNetworkConnectivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NetworkConnectivity"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:background="@drawable/battery_selector"
        android:textColor="@color/ColorText"/>
    <Button
        style="@style/layoutStyle"
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:background="@drawable/battery_selector"
        android:textColor="@color/ColorText"/>
    </LinearLayout>

</RelativeLayout>